# neet-perp

./: .env.example  Anchor.toml  BUILD_LOG.txt  Cargo.toml  README.md  SETUP.md  package.json
.github/workflows/: build.yml
app/: package.json
app/src/: index.css  main.tsx
app/src/components/: CollateralPanel.tsx  MarketHeader.tsx  OrderPanel.tsx  PositionsTable.tsx
app/src/hooks/: useMarket.ts
app/src/pages/: TradePage.tsx
app/src/utils/: math.ts
keeper/: package.json
keeper/src/: funding.ts  index.ts  liquidation.ts  oracle.ts
programs/neet_amm/: Cargo.toml
programs/neet_amm/src/: lib.rs
programs/neet_clearing_house/: Cargo.toml
programs/neet_clearing_house/src/: lib.rs
programs/neet_funding/: Cargo.toml
programs/neet_funding/src/: lib.rs
programs/neet_insurance/: Cargo.toml
programs/neet_insurance/src/: lib.rs
programs/neet_liquidation/: Cargo.toml
programs/neet_liquidation/src/: lib.rs
programs/neet_oracle_adapter/: Cargo.toml
programs/neet_oracle_adapter/src/: lib.rs
programs/neet_treasury/: Cargo.toml
programs/neet_treasury/src/: lib.rs
scripts/: deploy.ts
tests/: neet_perp.ts
