[workspace]
resolver = "2"
members = [
    "programs/neet_clearing_house",
    "programs/neet_amm",
    "programs/neet_oracle_adapter",
    "programs/neet_funding",
    "programs/neet_liquidation",
    "programs/neet_insurance",
    "programs/neet_treasury",
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# Pin blake3 to 1.5.1 which uses digest 0.10.x (crypto-common 0.1.x).
# blake3 >=1.8 uses digest 0.11.x -> crypto-common 0.2.1 (edition2024).
# Solana platform-tools Cargo 1.79 cannot parse edition2024 manifests.
[patch.crates-io]
blake3 = { git = "https://github.com/BLAKE3-team/BLAKE3.git", tag = "1.5.1" }
