[workspace]
resolver = "2"
members = [
    "programs/neet_clearing_house",
    "programs/neet_amm",
    "programs/neet_oracle_adapter",
    "programs/neet_funding",
    "programs/neet_liquidation",
    "programs/neet_insurance",
    "programs/neet_treasury",
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# Pin proc-macro2 to 1.0.80 — source_file() was removed in 1.0.81.
# anchor-syn 0.30.1 calls Span::source_file() for IDL generation.
# Combined with RUSTFLAGS="--cfg procmacro2_semver_exempt" in CI.
[patch.crates-io]
proc-macro2 = { git = "https://github.com/dtolnay/proc-macro2.git", tag = "1.0.80" }
