[workspace]
resolver = "2"
members = [
    "programs/neet_clearing_house",
    "programs/neet_amm",
    "programs/neet_oracle_adapter",
    "programs/neet_funding",
    "programs/neet_liquidation",
    "programs/neet_insurance",
    "programs/neet_treasury",
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# Vendored anchor-syn with the procmacro2_semver_exempt block removed.
# cargo-build-sbf (Solana toolchain) sets --cfg procmacro2_semver_exempt
# automatically, which activates a source_file() call in anchor-syn 0.30.1
# that no longer exists in proc-macro2 >=1.0.84. Patched copy in vendor/
# removes the offending block so IDL generation succeeds.
[patch.crates-io]
anchor-syn = { path = "vendor/anchor-syn" }
